src/objects/JBCXM__AppEvents__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__App_Event_Field__c</fullName>
        <label>App Event Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__App_Event_Group_Name__c</fullName>
        <label>App Event Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__App_Event_Object__c</fullName>
        <label>App Event Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__FormatText__c</fullName>
        <label>FormatText</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__HandlerClass__c</fullName>
        <label>HandlerClass</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsAccountBased__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to know whether this event get delivered on account subscription or not</description>
        <label>Account based subscription event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__UID__c</fullName>
        <label>Unique Identifier</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>App Events</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>